style.css
/* html{
    height: 100%;

} */

 body{
    margin: 0;
    padding: 0;
    /* min-height: 100%; */
    background-color: #EEEBDF;
    font-family: 'Josefin Sans', sans-serif;
 /*    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;  */
    overflow-x: hidden
} 

#profile-pic{
filter: drop-shadow(2px 5px 2px rgba(128, 128, 128, 0.384));
}
 

#top-container{
    display: flex;
    align-items: center;
    min-height: 100vh;
    padding: 50px 0;
}


#section-one{
    text-align: center;
  /*   padding: 30px;
    padding-top: 30px; */
    margin: 0;
}

#about-me-p{
    text-align: justify;
    font-weight: 300;
    font-size: 1.5rem;
}

#my-name{
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 600;
    font-size: 3rem;
}

#my-title{
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 100;
    font-size: 1.5rem;
}

#contact-me-btn{
    position: absolute;
    right: 25px;
    top: 25px;
    background-color: #EEEBDF;
    border: 1px solid #EB975B;
    padding: 8px 20px;
    border-radius: 4px;
    color: #EB975B;
    font-weight: bold;
    font-size: 20px;
    transition: 150ms;
    text-decoration: none;
}

#contact-me-btn:hover{
    background-color: #EB975B;
    color: #EEEBDF;
    transition: 150ms;
}


#section-two{
    background-color: #f6a93542;
    text-align: center;
    padding-top: 120px;
    padding-bottom: 100px;
    margin: 0; 
}

.sectionTitle{
    font-size: 40px;
}

.skills-sections{
    
    font-size: 35px;
} 

#skills-container{
    margin-top: 70px;
    margin-bottom: 70px;
}

.align-right>.skills-icons>a>img{
    margin-left: 15px;
}

.align-left>.skills-icons>a>img{
    margin-right: 15px;
}

.align-left{
    margin-right: 0;
    padding-right: 0;
}


.skills-icons{
    position: relative;
    top: 0;
    left: 0;
}

.shield-border-1{
    transition: 150ms;
    position: absolute;
    top: 6px;
    right: 238px;
}

.shield-border-1:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    right: 233px;
}

.shield-border-2{
    transition: 150ms;
    position: absolute;
    top: 6px;
    right: 168px;
}

.shield-border-2:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    right: 163px;
}

.shield-border-3{
    transition: 150ms;
    position: absolute;
    top: 6px;
    right: 97px;
}

.shield-border-3:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    right: 92px;
}

.shield-border-4{
    transition: 150ms;
    position: absolute;
    top: 5px;
    right: 5px;
}

.shield-border-4:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    right: 0px;
}

.shield-border-5{
    transition: 150ms;
    position: absolute;
    top: 6px;
    left: -5px;
}

.shield-border-5:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    left: 0px;
}

.shield-border-6{
    transition: 150ms;
    position: absolute;
    top: 6px;
    left: 74px;
}

.shield-border-6:hover{
    transition: 150ms;
    position: absolute;
    top: 1px;
    left: 79px;
}

.shield-border-7{
    transition: 150ms;
    position: absolute;
    top: 6px;
    left: 160px;
}

.shield-border-7:hover{
    transition: 150ms;
    position: absolute;
    top: 0px;
    left: 165px;
}
/* 
.row {
    --bs-gutter-x: 4rem;
  }
 */
.d-flex{
  flex-direction: column;
}

  .specific-skills{
    font-size: 10px;
  }

.mcmPattern{
    transform: rotate(0deg);
    -webkit-transition-duration: 0.3s;
    -moz-transition-duration: 0.3s;
    -o-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: -webkit-transform;
    -moz-transition-property: -moz-transform;
    -o-transition-property: -o-transform;
    transition-property: transform;
}

#section-three{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #F2EBCC;
    
    
}

#backgroundPattern{
    z-index: 0;
    overflow: hidden;
    margin: 0 auto;
}

#projectCards{
    margin-top: 50px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    pointer-events: none; /* the fix! */ 

}

#projects-title{
    margin: 0;
}

#projects-title>h1{
    background-color: #eeebdfc0;
}

.projectCard>.card{
    background-color: #eeebdfc0;
    padding: 15px;
    transition: 150ms;
    pointer-events: all;
    border: none;
}

.projectCard>.card:hover{
    transition: 150ms;
    transform: scale(1.03);
    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
}

.card-img-top{
    width: 100%;
    height: 200px;
    object-fit: scale-down;
}

.projectCard>a{
    pointer-events: stroke;
    text-decoration: none;
    color: black;
}

.projectCard>a:hover{
    color:grey
}

.cardParagraph{
    text-align: start;
}

.card>a, .card-body>a{
    text-decoration: underline 0.15em rgba(0, 0, 0, 0);
    color: black;
    transition: text-decoration-color 300ms;
}

.card>a:hover, .card-body>a:hover{
    text-decoration: underline 0.15em rgba(0, 0, 0, 255);
    color: black;
    transition: text-decoration-color 300ms;
}

#section-four{
    padding: 100px 0;
    background-color: #eb975b2a;
    min-height: 75vh;
    position: relative;
}

.btnGeneral{
    background-color: #eeebdf00;
    border: 1px solid #EB975B;
    padding: 8px 20px;
    border-radius: 4px;
    color: #EB975B;
    font-weight: bold;
    font-size: 20px;
    transition: 150ms;
    text-decoration: none;
    
}

.btnGeneral:hover{
    background-color: #EB975B;
    color: #EEEBDF;
    transition: 150ms;
    
}

#socialMedia>div>a{
    text-decoration: none;
}


#socialMedia{
    position: relative;
    display: flex;
    gap: 15px;
    align-items: center;
    justify-content: center;
    margin-top: 25px;
}

.socialIcons{
    width: 30px;
    height: auto;
    transition: 150ms;
}

.socialIcons:hover{
    width: 30px;
    height: auto;
    transition: 150ms;
    filter: drop-shadow(2px 2px 2px rgba(128, 128, 128, 0.568));
}


.material-symbols-outlined {
    color: black;
    vertical-align: middle;
    font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 100
  }

  .material-symbols-outlined:hover{
    transition: 150ms;
    filter: drop-shadow(2px 2px 2px rgba(128, 128, 128, 0.568));
}


#buzon{
    margin: 0;
    padding: 0;
    height: 50%;
    width: auto;
    position: absolute;
    bottom: 0;
    left: 70%;
    filter: drop-shadow(2px 2px 2px rgba(128, 128, 128, 0.568));
}

#buzonBandera{
    margin: 0;
    padding: 0;
    height: 25%;
    width: auto;
    position: absolute;
    bottom: 33%;
    left: 68%;
    transform: rotate(119deg);
    transition: 400ms;
    filter: drop-shadow(0px -4px 2px rgba(128, 128, 128, 0.726));
}

#buzonBandera:hover{
    transition: 400ms;
    transform: rotate(0deg);
    filter: drop-shadow(2px 2px 2px rgba(128, 128, 128, 0.726));
}



#footer{
    /* width: 100%; */
    text-align: center;
    background-color: #EB975B;
    color: white;
    padding: 25px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

#footer>a, #footer>div>a{
    text-decoration: underline 0.15em rgba(255, 255, 255, 0);
    color: white;
    transition: text-decoration-color 300ms;
}

#footer>a:hover, #footer>div>a:hover{
    text-decoration-color: rgba(255, 255, 255, 1);
}

